
  o Minor features (controller):
    - Add a SOURCE_ADDR field to STREAM NEW events so that controllers can
      match requests to applications. (Patch from Robert Hogan.)
    - Report address and port correctly on connections to DNSPort. (Patch
      from Robert Hogan.)
    - Add a RESOLVE command to launch hostname lookups. (Original patch
      from Robert Hogan.)

  o Performance improvements (win32):
    - Use Critical Sections rather than Mutexes for synchronizing threads
      on win32; Mutexes are heavier-weight, and designed for synchronizing
      between processes.

  o Deprecated features:
    - RedirectExits is now deprecated.

  o Minor features (controller):
    - You can now use the ControlSocket option to tell Tor to listen for
      controller connections on Unix domain sockets on systems that support
      them.  (Patch from Peter Palfrader.)
    - STREAM NEW events are generated for DNSPort requests and for tunneled
      directory connections. (Patch from Robert Hogan.)

  o Major bugfixes (directory):
    - Fix a crash bug in directory authorities when we re-number the
      routerlist while inserting a new router. [Bugfix on 0.1.2.x]

  o Minor bugfixes (directory):
    - Fix another crash bug related to extra-info caching.  (Bug found by
      Peter Palfrader.) [Bugfix on 0.2.0.2-alpha]
    - Directories no longer return a "304 not modified" when they don't
      have the networkstatus the client asked for. Also fix a memory
      leak when returning 304 not modified. [Bugfixes on 0.2.0.2-alpha]

  o Minor bugfixes (dns):
    - Fix a crash when DNSPort is set more than once. (Patch from Robert
      Hogan.) [Bugfix on 0.2.0.2-alpha]
    - Add DNSPort connections to the global connection list, so that we
      can time them out correctly. (Bug found by mwenge) [Bugfix on
      0.2.0.2-alpha]
    - Fix eventdns.c behavior on Solaris: It is critical to include
      orconfig.h _before_ sys/types.h, so that we can get the expected